# docker-hackathon-dockerfile-generator

./: Dockerfile.example  Makefile  README.md  pyproject.toml  python_dockerfile.jinja
dockerfile_generator/: .bashrc  CMakeLists.txt  Dockerfile  entrypoint.py  install_cmake.sh  model_definition.yaml  model_definition.yml  parse_model_definition.py  parser.py
dockerfile_generator/templates/: R.jinja  python.jinja
templates/: python_dockerfile.jinja
