[tool.poetry]
name = "dockerfile-generator"
version = "0.1.0"
description = ""
authors = ["Alex Manning <alexander.manning@stfc.ac.uk>"]
readme = "README.md"
packages = [{include = "dockerfile_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
